content/vault/v2.x/content/docs/sync/awssm.mdx
---
layout: docs
page_title: Sync secrets from Vault to AWS Secrets Manager
description: >-
  Automatically sync and unsync the secrets from Vault to AWS Secrets Manager to centralize visibility and control of secrets lifecycle management.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:55.000Z
last_modified: 2026-04-15T00:15:55.000Z
# END AUTO GENERATED METADATA
---

# Sync secrets from Vault to AWS Secrets Manager

The AWS Secrets Manager destination enables Vault to sync and unsync secrets of your choosing into
an external AWS account. When configured, Vault will actively maintain the state of each externally-synced
secret in near-realtime. This includes sending new secrets, updating existing secret values, and removing
secrets when they either get dissociated from the destination or deleted from Vault. This enables the
ability to keep control of all your secrets localized while leveraging the benefits of the AWS Secrets Manager.

Prerequisites:
* Ability to read or create KVv2 secrets
* Ability to create AWS IAM user and access keys with access to the Secrets Manager, or configure workload identity federation (WIF)
* Ability to create sync destinations and associations on your Vault server

## Setup

1. Navigate to the [AWS Identity and Access Management (IAM) console](https://us-east-1.console.aws.amazon.com/iamv2/home#/home)
  to configure an IAM user or role with access to the Secrets Manager. The following example policy outlines the required
  permissions to use secrets syncing.

  ```json
  {
    "Version": "2012-10-17",
    "Statement": [
        {
          "Effect": "Allow",
          "Action": [
            "secretsmanager:Create*",
            "secretsmanager:Update*",
            "secretsmanager:Delete*",
            "secretsmanager:TagResource"
          ],
          "Resource": "arn:aws:secretsmanager:*:*:secret:vault*"
        }
    ]
  }
  ```


1. Configure a sync destination with the appropriate authentication credentials.

   **IAM user credentials:** Use IAM user credentials created in the previous step

	```shell-session
	$ vault write sys/sync/destinations/aws-sm/my-awssm-1 \
		  access_key_id="$ACCESS_KEY_ID" \
		  secret_access_key="$SECRET_ACCESS_KEY" \
		  region='us-east-1'
	```

	**Output:**

	<CodeBlockConfig hideClipboard>

	```plaintext
	Key                   Value
	---                   -----
	connection_details    map[access_key_id:***** region:us-east-1 secret_access_key:*****]
	name                  my-awssm-1
	type                  aws-sm
	```

	</CodeBlockConfig>

   **Workload identity federation (WIF) authentication**: Configure a trust relationship
     between Vault and AWS. Use WIF to eliminate the need to manage long-lived
     access keys.

	```shell-session
	$ vault write sys/sync/destinations/aws-sm/my-awssm-1 \
		  role_arn="arn:aws:iam::123456789123:role/example-web-identity-role" \
		  identity_token_audience="$AUDIENCE" \
		  region='us-east-1'
	```

	**Output:**

	<CodeBlockConfig hideClipboard>

	```plaintext
	Key                   Value
	---                   -----
	connection_details    map[identity_token_audience:***** region:us-east-1 role_arn:arn:aws:iam::123456789123:role/example-web-identity-role]
	name                  my-awssm-1
	type                  aws-sm
	```

	</CodeBlockConfig>

## Usage

1.	If you do not already have a KVv2 secret to sync, mount a new KVv2 secrets engine.

	```shell-session
	$ vault secrets enable -path=my-kv kv-v2
	```

	**Output:**

	<CodeBlockConfig hideClipboard>

	```plaintext
	Success! Enabled the kv-v2 secrets engine at: my-kv/
	```

	</CodeBlockConfig>

1. Create secrets you wish to sync with a target AWS Secrets Manager.

	```shell-session
	$ vault kv put -mount=my-kv my-secret foo='bar'
	```

	**Output:**

	<CodeBlockConfig hideClipboard>

	```plaintext
	==== Secret Path ====
	my-kv/data/my-secret

	======= Metadata =======
	Key                Value
	---                -----
	created_time       2023-09-19T13:17:23.395109Z
	custom_metadata    <nil>
	deletion_time      n/a
	destroyed          false
	version            1
	```

	</CodeBlockConfig>

1.	Create an association between the destination and a secret to synchronize.

	```shell-session
	$ vault write sys/sync/destinations/aws-sm/my-awssm-1/associations/set \
		mount='my-kv' \
		secret_name='my-secret'
	```

	**Output:**

	<CodeBlockConfig hideClipboard>

	```plaintext
	Key                   Value
	---                   -----
	associated_secrets    map[kv_37993f8a/my-secret:map[accessor:kv_37993f8a secret_name:my-secret sync_status:SYNCED updated_at:2023-09-19T13:17:35.085581-05:00]]
	store_name            aws1
	store_type            aws-sm
	```

	</CodeBlockConfig>

1. Navigate to the [Secrets Manager](https://console.aws.amazon.com/secretsmanager/) in the AWS console
	to confirm your secret was successfully synced.

Moving forward, any modification on the Vault secret will be propagated to its AWS Secrets Manager
counterpart. Creating a new secret version in Vault will update the one in AWS to the new version. Deleting either
the secret or the association in Vault will delete the secret in your AWS account as well.

## Encryption and Replication

The AWS Secrets Manager destination can use customer-managed AWS KMS keys
instead of AWS-managed keys to encrypt synced secrets. It also supports multi-region replication of synced secrets. Create your KMS keys before configuring the destination.

Use `kms_key_id` to set the customer-managed key that encrypts secrets in the primary region. Use
`replica_regions` to map each replica region to the KMS key that encrypts secrets replicated to that region.
You can set `kms_key_id` and `replica_regions` together. Each replica key is independent. For example, you can provide a
customer-managed key for some replica regions and leave others empty to use the AWS-managed key. AWS requires
each replica key to reside in the region it encrypts.

Refer to the [AWS documentation on encryption](https://docs.aws.amazon.com/secretsmanager/latest/userguide/security-encryption.html)
for more details on how AWS Secrets Manager encrypts your secrets, and the
[AWS documentation on replication](https://docs.aws.amazon.com/secretsmanager/latest/userguide/replicate-secrets.html)
for more details on replicating secrets across regions.

```shell-session
$ vault write sys/sync/destinations/aws-sm/my-awssm-1 \
    access_key_id="$ACCESS_KEY_ID" \
    secret_access_key="$SECRET_ACCESS_KEY" \
    region='us-east-1' \
    kms_key_id='arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012' \
    replica_regions={us-east-2=arn:aws:kms:us-east-2:123456789012:key/22222222-2222-2222-2222-222222222222,us-west-1=}
```

**Output:**

<CodeBlockConfig hideClipboard>

```plaintext
Key                   Value
---                   -----
connection_details    map[access_key_id:***** kms_key_id:arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012 region:us-east-1 replica_regions:[us-east-2=arn:aws:kms:us-east-2:123456789012:key/22222222-2222-2222-2222-222222222222 us-west-1=] secret_access_key:*****]
name                  my-awssm-1
type                  aws-sm
```

</CodeBlockConfig>

### Permissions

Add the following IAM permissions to the policy configured in the [Setup](#setup) section. The KMS
permissions are only required when using customer-managed keys.

- `secretsmanager:ReplicateSecretToRegions`
- `secretsmanager:RemoveRegionsFromReplication`
- `kms:Encrypt`
- `kms:Decrypt`
- `kms:GenerateDataKey`

Refer to the [Secrets sync API examples](/vault/api-docs/system/secrets-sync#create-update-aws-secrets-manager-destination) for sample payloads.

## Workload identity federation (WIF)


The AWS Secrets Manager sync destination supports the WIF workflow, and has a source of identity called
an identity token. The identity token is a JWT that Vault signs internally using the
[secrets sync identity token issuer](/vault/api-docs/secret/identity/tokens#read-openid-configuration-for-secret-sync-identity-token-issuer).

The sync destination can exchange identity tokens for short-lived STS credentials
needed to perform the requested actions as long as you have configured a trust
relationship between Vault and AWS using
[workload identity federation](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_providers_oidc.html)

Exchanging identity tokens for STS credentials lets the AWS Secrets Manager sync destination
operate without configuring explicit access to sensitive IAM security
credentials.

To configure the sync destination to use WIF:

1. Ensure that Vault [openid-configuration](/vault/api-docs/secret/identity/tokens#read-openid-configuration-for-secret-sync-identity-token-issuer)
   and [public JWKS](/vault/api-docs/secret/identity/tokens#read-the-public-jwks-from-a-secrets-sync-identity-token-issuer)
   APIs are network-reachable by AWS. We recommend using an API proxy or gateway
   if you need to limit Vault API exposure.

1. Create an
   [IAM OIDC identity provider](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_providers_create_oidc.html)
   in AWS.

   - The provider URL **must** point at your [Vault identity token issuer](/vault/api-docs/secret/identity/tokens#read-openid-configuration-for-secret-sync-identity-token-issuer) with the
     `/.well-known/openid-configuration` suffix removed. For example:
     `https://host:port/v1/identity/oidc/secrets-sync`.

   - The audience should uniquely identify the recipient of the identity
     token. In AWS, the recipient is the identity provider. We recommend using
     the `host:port/v1/identity/oidc/secrets-sync` portion of the provider URL
     as your recipient since it is unique for each configured identity provider.

1. Create a [web identity role](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_create_for-idp_oidc.html#idp_oidc_Create)
   in AWS with the same audience used for your IAM OIDC identity provider.

   - The subject identifier **must** match the unique `sub` claim issued by identity tokens and have the form `secrets-sync:<namespace_path>:<store_type>:<store_name>`.

   - Attach the IAM policy granting the required Secrets Manager permissions
     to the web identity role, as shown in the [Setup](#setup) section.

1. Configure the AWS Secrets Manager sync destination with the IAM OIDC
   audience value and web identity role ARN.

```shell-session
$ vault write sys/sync/destinations/aws-sm/my-awssm-1 \
    identity_token_audience="vault.example/v1/identity/oidc/secrets-sync" \
    role_arn="arn:aws:iam::123456789123:role/example-web-identity-role" \
    region="us-east-1"
```

Your sync destination can now use WIF for its configuration credentials.
By default, WIF [credentials](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html)
have a time-to-live of 1 hour and automatically refresh when they expire.

For more information about the WIF-related configuration parameters, refer to the
[API documentation](/vault/api-docs/system/secrets-sync#create-update-aws-secrets-manager-destination).

## Access management

You can allow or restrict access to secrets by attaching AWS Resource Tags
to secrets. For example, the following AWS IAM policy prevents Vault from
modifying secrets that were not created by a sync operation:

  <CodeBlockConfig hideClipboard>

    {
      "Version": "2012-10-17",
      "Statement": [
        {
          "Effect": "Allow",
          "Action": [
            "secretsmanager:*",
          ],
          "Resource": "*",
          "Condition": {
            "StringEquals": {
              "secretsmanager:ResourceTag/hashicorp:vault": "" # This tag is automatically added by Vault on every synced secrets
            }
          }
        }
      ]
    }

  </CodeBlockConfig>

To prevent out-of-band overwrites, we recommend adding a negative condition on
all write-access policies not used by Vault:

  <CodeBlockConfig hideClipboard>

    {
      "Version": "2012-10-17",
      "Statement": [
        {
          "Effect": "Deny",
          "Action": [
            "secretsmanager:*"
          ],
          "Resource": "*",
          "Condition": {
            "StringNotEquals": {
              "secretsmanager:ResourceTag/hashicorp:vault": "" # This tag is automatically added by Vault on every synced secrets
            }
          }
        }
      ]
    }

  </CodeBlockConfig>

<Warning title="Use wildcards with extreme caution">

  The previous examples use wildcards for the sake of brevity. We strongly
  recommend you use the principle of least privilege to restrict actions and
  resources for each use case to the minimum necessary requirements.
  
</Warning>

## Tutorial

Refer to the [Vault Enterprise Secrets Sync tutorial](/vault/tutorials/enterprise/secrets-sync)
to learn how to configure the secrets sync between Vault and AWS Secrets Manager.

## API

Please see the [secrets sync API](/vault/api-docs/system/secrets-sync) for more details.
